// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial state renders Close filters without crashing 1`] = `
<section
  className="filter-panel-toggle"
>
  <div
    className="m-btn-group"
  >
    <p>
       
    </p>
    <button
      className="a-btn"
      onClick={[Function]}
    >
      Close Filters
    </button>
  </div>
</section>
`;

exports[`initial state renders Filter Results without crashing 1`] = `
<section
  className="filter-panel-toggle"
>
  <div
    className="m-btn-group"
  >
    <p>
       
    </p>
    <button
      className="a-btn"
      onClick={[Function]}
    >
      Filter results
    </button>
  </div>
</section>
`;
